	PR c++/59231 	PR c++/11586 	PR c++/14710 	PR c++/57132 gcc/ 	* c-common.c (shorten_compare): Don't check 	c_inhibit_evaluation_warnings. gcc/cp/ 	* pt.c (struct warning_sentinel): New. 	(tsubst_copy_and_build): Use it instead of 	c_inhibit_evaluation_warnings.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@208183 138bc75d-0d04-0410-961f-82ee72b054a4